--- a/project-tab-blank.html
+++ b/project-tab-blank.html
@@ -43,41 +43,14 @@
                             <div class="project-tab-section">
                                 <ul class="nav nav-tabs" id="myTab" role="tablist">
                                     <li class="nav-item" role="presentation">
-                                        <a class="active" id="project-tab" data-toggle="tab" href="#project" role="tab" aria-controls="project" aria-selected="true">Home</a>
+                                        <a class="active" id="project-tab" data-toggle="tab" href="#project" role="tab" aria-controls="project" aria-selected="true">Projects</a>
                                     </li>
                                     <li class="nav-item" role="presentation">
-                                        <a id="report-tab" data-toggle="tab" href="#report" role="tab" aria-controls="report" aria-selected="false">Profile</a>
+                                        <a id="report-tab" data-toggle="tab" href="#report" role="tab" aria-controls="report" aria-selected="false">Timer Report</a>
                                     </li>
                                 </ul>
                                 <div class="tab-content" id="myTabContent">
                                     <div class="tab-pane fade show active" id="project" role="tabpanel" aria-labelledby="project-tab">
-
-                                        <!-- project-results starts -->
-                                        <div class="project-results">
-                                            <form action="#">
-                                                <div class="form-group project-search">
-                                                    <input type="text" class="form-control" id="username" placeholder="Enter you username">
-                                                    <span class="searh-icon"><img src="img/search-icon.svg" alt=""></span>
-                                                </div>
-                                            </form>
-                                            <div class="search-results">
-                                                <ul>
-                                                    <li>
-                                                        <h4>UI Design for Android App</h4>
-                                                        Hourly Rate: <span>$12/hrs</span><br/>
-                                                        Maxium Limit:  <span>30hrs/week</span>
-                                                        <a href="#" class="boxed-btn">Start Tracking</a>
-                                                    </li>
-                                                    <li>
-                                                        <h4>UI Design for Android App</h4>
-                                                        Hourly Rate: <span>$12/hrs</span><br/>
-                                                        Maxium Limit:  <span>30hrs/week</span>
-                                                        <a href="#" class="boxed-btn">Start Tracking</a>
-                                                    </li>
-                                                </ul>
-                                            </div>
-                                        </div>
-                                        <!-- project-results ends -->
 
                                         <!-- no-active-content starts -->
                                         <div class="no-active-content text-center">
@@ -88,6 +61,7 @@
                                         <!-- no-active-content ends -->
                                     </div>
                                     <div class="tab-pane fade" id="report" role="tabpanel" aria-labelledby="report-tab">
+
                                         <!-- no-active-content starts -->
                                         <div class="no-active-content text-center">
                                             <img src="img/no-active-content-icon.svg" alt="">
@@ -95,6 +69,7 @@
                                             <a href="#">Browse jobs</a>, get hired
                                         </div>
                                         <!-- no-active-content ends -->
+                                        
                                     </div>
                                 </div>
                             </div>
